# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hxq-login-mcp"           # PyPI上的包名，必须唯一
version = "1.0.0"                # 初始版本号
description = "MCP server for HXQ (盒小圈) login API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WilliamsCSDN", email = "WilliamsCSDN@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",          # MCP协议实现
    "httpx>=0.25.0",       # HTTP客户端
    "pydantic>=2.0.0",     # 数据验证
]

[project.scripts]
mini_mcp_server = "mini_mcp_server.__main__:main"  # 命令行入口点

[project.urls]
Homepage = "https://github.com/WilliamsCSDN/mini_mcp_server"
Repository = "https://github.com/WilliamsCSDN/mini_mcp_server"